--- a/roles/extras.chrome/tasks/main.yml
+++ b/roles/extras.chrome/tasks/main.yml
@@ -5,6 +5,11 @@
     state: present
     filename: google-chrome
 
+  apt_repository:
+    repo: "deb  {{ '[arch=amd64]' if  ansible_architecture == 'x86_64' else '' }} http://dl.google.com/linux/chrome/deb/ stable main"
+    state: absent
+    filename: google-chrome
+
 - name: Add Chrome keys
   apt_key:
     keyserver: keyserver.ubuntu.com
