--- a/roles/base.linux/tasks/main.yml
+++ b/roles/base.linux/tasks/main.yml
@@ -22,6 +22,11 @@
   ignore_errors: yes
 
 
+- name: Check if update repos are present
+  shell: fgrep -q "{{ ansible_distribution_release }}-updates" /etc/apt/sources.list
+  register: check_uprepo
+  check_mode: no
+
 - name: Add update repos
   apt_repository:
     repo: "deb http://de.archive.ubuntu.com/ubuntu {{ ansible_distribution_release }}-{{ item }} main restricted universe multiverse"
@@ -29,11 +34,13 @@
   with_items:
     - updates
     - security
-
+  when: check_uprepo.rc > 0
+    
 - name: Check if 32bit enabled
   shell: dpkg --print-foreign-architectures | grep -q i386
   register: check_dpkg_32bit
   failed_when: false
+  check_mode: no
 
 - name: Add i386 architecture
   shell: dpkg --add-architecture i386
