--- a/roles/extras.jetbrains/tasks/main.yml
+++ b/roles/extras.jetbrains/tasks/main.yml
@@ -19,6 +19,6 @@
 - import_tasks: rubymine.yml
   when: jetbrains is defined and jetbrains.ruby is defined and jetbrains.ruby.enable
 
-- import_tasks: intelliJ.yml
-  when: jetbrains is defined and jetbrains.java is defined and jetbrains.java == "free"
+- import_tasks: intelliJU.yml
+  when: jetbrains is defined and jetbrains.java is defined and jetbrains.java.license != "free"
 
