[Linux] Fix deprecated construct

--- a/roles/base.linux/tasks/main.yml
+++ b/roles/base.linux/tasks/main.yml
@@ -50,8 +50,7 @@
 
 - name: Install base tools
   apt:
-    name: "{{ item }}"
-  with_items:
+    name:
     - apt-transport-https
     - aptitude
     - atop
