--- a/roles/extras.jetbrains/defaults/main.yml
+++ b/roles/extras.jetbrains/defaults/main.yml
@@ -2,7 +2,8 @@
 jetbrains:
   ruby:
     enable: no
-    version: 2018.1.3
+    #version: 2018.1.3
+    version: 2019.2
   php:
     enable: no
     version: 2018.1.5
@@ -13,3 +14,6 @@ jetbrains:
     enable: no
     version: 2018.1.4
     build: 181.5087.20
+  agent:
+    enable: no
+    url: https://static.hron.me/privcdn/jetbrains-agent-working.zip
