[INTELLIJ:C] Adding support for IntelliJ Community Edition

--- a/roles/extras.jetbrains/tasks/main.yml
+++ b/roles/extras.jetbrains/tasks/main.yml
@@ -22,3 +22,5 @@
 - import_tasks: intelliJU.yml
   when: jetbrains is defined and jetbrains.java is defined and jetbrains.java.enable and jetbrains.java.license != "free"
 
+- import_tasks: intelliJC.yml
+  when: jetbrains is defined and jetbrains.java is defined and jetbrains.java.enable and jetbrains.java.license == "free"
