--- a/roles/base.users/tasks/main.yml
+++ b/roles/base.users/tasks/main.yml
@@ -3,12 +3,11 @@
     name: "{{ item.shell }}"
     state: present
 
-
 - name: "[USER] Create user {{ item }}"
   user:
     name: "{{ item.name }}"
     comment: "{{ item.fullname | default(item.name) }}"
-    shell: "/bin/{{ item.shell | default("bash") }}"
+    shell: "/bin/{{ item.shell | default('bash') }}"
     create_home: yes
     append: yes
     groups:
@@ -19,12 +18,6 @@
       - "{{ item.groups | default([]) }}"
   with_items:
     - "{{ users }}"
-
-
-
-
-
-
 
 - include_tasks: "{{ item.name }}.yml"
   with_items:
